first css appli repo

--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Repository</title>
+    <link rel="stylesheet" href="repo.css">
 </head>
 <body>
-    
+    <h1>MY FIRST GITHUB REPOSITORY WORK</h1>
+    <div class="blog">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione at natus iure voluptatem eum veritatis enim assumenda eaque quis soluta quod aspernatur ab voluptatibus, placeat nostrum sunt fugiat? Repudiandae, perspiciatis.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione at natus iure voluptatem eum veritatis enim assumenda eaque quis soluta quod aspernatur ab voluptatibus, placeat nostrum sunt fugiat? Repudiandae, perspiciatis.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione at natus iure voluptatem eum veritatis enim assumenda eaque quis soluta quod aspernatur ab voluptatibus, placeat nostrum sunt fugiat? Repudiandae, perspiciatis.</p>
+    </div>
+    <div class="git">
+    <h3>How to start Git from local computer to GitHub.</h3>
+    <ol>
+        <li>git init</li>
+        <li>git add .</li>
+        <li>git commit -m "first comment"</li>
+        <li>git branch -M main</li>
+        <li>gir remote add origin https://github.com/misskhat/myfirstrepo</li>
+        <li>git push -u origin main</li>
+    </ol>
+    </div>
 </body>
 </html>
